WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110534
QuickTime plugin doesn't load when accelerated compositing is disabled
https://bugs.webkit.org/show_bug.cgi?id=110534
Summary
QuickTime plugin doesn't load when accelerated compositing is disabled
Dima Gorbik
Reported
2013-02-21 17:15:50 PST
When accelerated compositing is disabled, QuickTime plugin doesn't load because it tries to set NPDrawingModelQuickDraw instead of using CA/CG models.
Attachments
Patch
(1.30 KB, patch)
2013-02-21 17:21 PST
,
Dima Gorbik
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dima Gorbik
Comment 1
2013-02-21 17:21:51 PST
Created
attachment 189645
[details]
Patch
WebKit Review Bot
Comment 2
2013-02-21 17:43:51 PST
Comment on
attachment 189645
[details]
Patch Clearing flags on attachment: 189645 Committed
r143675
: <
http://trac.webkit.org/changeset/143675
>
WebKit Review Bot
Comment 3
2013-02-21 17:43:54 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug