QuickTime plugin doesn't load when accelerated compositing is disabled https://bugs.webkit.org/show_bug.cgi?id=110534

Patch by Dima Gorbik <dgorbik@apple.com> on 2013-02-21
Reviewed by Anders Carlsson.

We shouldn't disable accelerated compositing for plugins, because
plugins such as QuickTime rely on this and will try to set other drawing
models that we don't support.

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::isAcceleratedCompositingEnabled):

git-svn-id: svn://svn.chromium.org/blink/trunk@143675 bbb929c8-8fbe-4397-9dbb-9b2b20218538