third_party/WebKit/Source/WebKit2/WebProcess/Plugins/PluginView.cpp
@@ -1347,8 +1347,6 @@ bool PluginView::isAcceleratedCompositingEnabled()
     if (!settings)
         return false;
 
-    if (m_pluginElement->displayState() < HTMLPlugInElement::PlayingWithPendingMouseClick)
-        return false;
     return settings->acceleratedCompositingEnabled();
 }
 
